prost-reflect/tests/snapshots/main__enum_default3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    enumType:
      - name: Foo
        value:
          - name: DEFAULT
            number: 0
    syntax: proto3

