prost-reflect/tests/snapshots/main__enum_duplicate_number3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    enumType:
      - name: Enum
        value:
          - name: ZERO
            number: 0
          - name: ZERO2
            number: 0
        options:
          allowAlias: true

