prost-reflect/tests/snapshots/main__enum_field_invalid_default7.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    package: foo
    messageType:
      - name: Message
        field:
          - name: foo
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_ENUM
            typeName: ".foo.Message.Foo"
            defaultValue: ZERO
            jsonName: foo
        enumType:
          - name: Foo
            value:
              - name: ZERO
                number: 0

