prost-reflect/tests/snapshots/main__enum_field_invalid_default9.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    package: foo
    messageType:
      - name: Message
        field:
          - name: foo
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_ENUM
            typeName: ".foo.Parent.Foo"
            defaultValue: ZERO
            jsonName: foo
      - name: Parent
        enumType:
          - name: Foo
            value:
              - name: ZERO
                number: 0

