prost-reflect/tests/snapshots/main__field_default_value2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    messageType:
      - name: Message
        field:
          - name: default_float_exp
            number: 23
            label: LABEL_OPTIONAL
            type: TYPE_FLOAT
            defaultValue: "9000000"
            jsonName: defaultFloatExp
          - name: default_double_exp
            number: 24
            label: LABEL_OPTIONAL
            type: TYPE_DOUBLE
            defaultValue: "90000000000000000000000"
            jsonName: defaultDoubleExp

