prost-reflect/tests/snapshots/main__message_reserved_range_message_set1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    messageType:
      - name: Foo
        options:
          messageSetWireFormat: true
        reservedRange:
          - start: 1
            end: 2147483647

