prost-reflect/tests/snapshots/main__message_reserved_range_message_set2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    messageType:
      - name: Foo
        extensionRange:
          - start: 1
            end: 2147483647
        options:
          messageSetWireFormat: true

