prost-reflect/tests/snapshots/main__name_conflict_field_camel_case3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    messageType:
      - name: Foo
        field:
          - name: foo
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_INT32
            jsonName: foo
          - name: FOO
            number: 2
            label: LABEL_OPTIONAL
            type: TYPE_INT32
            jsonName: FOO

