prost-reflect/tests/snapshots/main__name_conflict_package2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "name 'foo' is defined twice"
related: []
severity: error

